# verdikt

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  TESTING.md  architecture.md  docker-compose.yaml  evaulation_architecture.md  login-client.pat  main.py  pyproject.toml
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/versions/: 2026_01_27_2048-cbe06dc65990_add_app_answer.py  2026_01_28_2119-4005bc2ee1ee_add_eval_type.py  2026_02_07_2103-769abf8a9d73_add_app_datasets_table.py  2026_02_08_2100-a1b2c3d4e5f6_add_app_id_to_prompt_versions.py  2026_02_08_2134-719ff1882c0a_remove_hash_uniquines.py  2026_02_09_2140-e75178bca5b8_move_prompt_id_to_evaluations.py  2026_03_08_1000-a3b4c5d6e7f8_add_slug_to_apps.py
backend/src/: api_app.py  config.py  dependencies.py  logging.py
backend/src/api/: auth.py  deps.py
backend/src/api/v1/: router.py  schemas.py
backend/src/app/: commands.py  queries.py  schemas.py
backend/src/db/: pg.py
backend/src/db/tables/: app_datasets.py  (+3 more)
backend/src/evaluation/: commands.py  queries.py
backend/src/judgement/: prompts.py  queries.py
backend/src/judgment/: commands.py  queries.py
backend/src/processors/: judgment_processor.py
backend/src/repositories/: apps.py  base.py  evaluation.py  judgment.py  sample.py
backend/src/sample/: queries.py
backend/src/schemas/: app.py  app_dataset.py  sample.py
backend/tests/: pg_test.py  utils.py
backend/tests/factories/: app.py  app_dataset.py  evaluation.py  judgment.py  prompt_version.py
(+179 files in other folders)
