[project]
name = "ai-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "cachetools>=6.2.4",
    "dotenv>=0.9.9",
    "instructor>=1.14.4",
    "litellm>=1.81.0",
    "openai>=2.15.0",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "sqlalchemy>=2.0.45",
]
